--- a/project/asset/css/boardType.css
+++ b/project/asset/css/boardType.css
@@ -11,9 +11,9 @@
 }
 .Option select {
     width: 325px;
-    padding: 8px 20px;
+    padding: 3px 20px;
     font-family: inherit;
-    background: url(../img/arrow.png) no-repeat 95% 50%; /* 네이티브 화살표 대체 */
+    background: url(../img/arrow.svg) no-repeat 95% 50%; /* 네이티브 화살표 대체 */
     border: 1px solid #6cc4b3;
     border-radius: 25px;
     font-size: 20px;
@@ -23,33 +23,44 @@
     appearance: none;
 }
 .board_ranking {
-    margin: 20px 0 70px 0;
+    margin: 50px 0 70px 0;
 }
 .board_ranking h3 {
     padding-bottom: 5px;
     font-size: 24px;
     font-weight: 200;
     color: #6cc4b3;
-    border-bottom: 1px solid #757575;
+    border-bottom: 1px solid #6cc4b3;
 }
 .ranking__inner {
     padding: 20px;
     border-radius: 15px;
     margin-top: 20px;
-    box-shadow: 3px 3px 6px 2px #dedede25;
+    box-shadow: 3px 3px 6px 2px rgba(222, 222, 222, 0.25);
 }
 .ranking__inner span {
-    padding-top: 20px;
     font-size: 20px;
+    color: #505050;
 }
 .board_ranking_tr {
     color: #505050;
 }
+.ranking__inner > table tr td {
+    font-size: 18px;
+    font-weight: 400;
+}
+.ranking__inner > table tr td:nth-child(2) {
+    font-size: 16px;
+}
+.ranking__inner > table tr td:nth-child(3) {
+    font-size: 16px;
+}
 .weekBest {
     margin-right: 30px;
+    padding-right: 30px;
+    border-right: 1px dashed #505050;   
 }
 .MonthBest {
-    margin-left: 30px;
     color: #6cc4b3;
 }
 .ranking__inner table {
@@ -74,6 +85,7 @@
 .table tr td {
     text-align: center;
     border-bottom: 1px dashed #6cc4b3;
+    color: #505050;
 }
 .table tr td:nth-child(2) {
     text-align-last: left;
@@ -94,14 +106,15 @@
     padding-top: 10px;
 }
 .borad__table td {
-    padding: 13px 5px;
+    padding: 20px 5px;
 
 }
 .borad__table td a {
     color: #505050;
+    font-size: 18px;
 }
 .borad__pages {
-    margin: 40px 0;
+    margin: 70px 0 20px 0;
 }
 .borad__pages ul {
     text-align: center;
@@ -123,7 +136,7 @@
 }
 .search-txt {
     width: 300px;
-    height: 35px;
+    height: 30px;
     border-radius: 20px;
     padding-left: 20px;
     border: 1px solid #6cc4b3;
@@ -140,10 +153,20 @@
 .board_write {
     position: absolute;
     right: 0;
-    bottom: 5px;
-    padding: 5px 20px;
-    border: 1px solid #505050;
+    bottom: 1px;
+    padding: 3px 16px;
+    border: 1px solid #6cc4b3;
     border-radius: 20px;
     transition: all 0.3s;
+    color: #6cc4b3;
+}
+#searchOption1:focus {
+    outline: none;
+}
+.search-txt:focus {
+    outline: none;
+}
+input:required {
+    font-family: 'SCoreDream';
     color: #505050;
 }
