--- a/project/asset/css/comment.css
+++ b/project/asset/css/comment.css
@@ -1,13 +1,18 @@
 #comment {
     margin-top: 70px;
     margin-bottom: 50px;
-    padding-bottom: 70px;
+    padding-bottom: 50px;
     border-bottom: 1px dashed #6cc4b3;
 }
 ​#comment > h2 {
     color: #6cc4b3;
     font-size: 20px;
     border-bottom: 1px solid #757575;
+    padding-bottom: 10px;
+}
+.comment__h2 {
+    color: #6cc4b3;
+    border-bottom: 1px solid #6cc4b3;
     padding-bottom: 10px;
 }
 .com__top {
@@ -30,12 +35,15 @@
 .com__top {
     display: flex;
 }
+.com__table__p {
+    font-weight: 300;
+}
 .com__like {
     margin-top: 3px;
     width: 100px;
     height: 20px;
     justify-content: space-between;
-    box-shadow: 3px 3px 6px 2px #dedede25;
+    box-shadow: 3px 3px 6px 2px rgba(222, 222, 222, 0.25);
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
@@ -48,8 +56,9 @@
 }
 .com__like > p {
     color: #6cc4b3;
-    font-size: px;
+    font-size: 16px;
     margin-bottom: 10px;
+    padding-right: 5px;
 }
 .com__table__p {
     margin-top: 10px;
