--- a/project/asset/css/header.css
+++ b/project/asset/css/header.css
@@ -1,12 +1,12 @@
 /* headerType */
 .header__inner {
     margin-top: 40px;
-    width: 100%;
+    /* width: 100%; */
     height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 310px;
+    padding: 0 295px;
     box-sizing: border-box;
 }
 .header__logo {
@@ -22,7 +22,7 @@
     font-size: 18px;
 }
 .header__menu {
-    width: 80%;
+    /* width: 80%; */
     text-align: right;
     padding-top: 20px;
 }
@@ -61,4 +61,132 @@
 .header__member a:hover {
     background-color: #000;
     color: #fff;
+}
+.ham_menu {
+    position: absolute !important;
+    top: 50%;
+    right: -40px;
+    display: block;
+    width: 40px;
+    height: 10px;
+    position: relative;
+    cursor: pointer;
+}
+.ham_menu div {
+    position: absolute;
+    right: 0;
+    height: 2px;
+    border-radius: 2px;
+    background: #6CC4B3;
+    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6), width 0.2s ease 0.2s;
+}
+.ham_menu input {
+    display: none;
+}
+.ham_menu input + div {
+    top: 50%;
+    left: 0;
+    margin: -1px 0 0 0;
+    width: 40px;
+    transform-origin: 50% 50%;
+}
+.ham_menu input + div + div {
+    top: -10px;
+    left: 0;
+    width: 24px;
+    transform-origin: 0 50%;
+}
+.ham_menu input + div + div + div {
+    bottom: -10px;
+    right: 0;
+    width: 28px;
+    transform-origin: 100% 50%;
+    transform: translate(-12px, 0);
+}
+.ham_menu.active input + div {
+    transform: rotate(-45deg);
+    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6) 0.1s;
+}
+.ham_menu.active input + div + div {
+    width: 20px;
+    transform: translate(6px, 0) rotate(45deg);
+    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6) 0.1s, width 0.2s ease;
+}
+.ham_menu.active input + div + div + div {
+    width: 20px;
+    transform: translate(-6px, 0) rotate(45deg);
+    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6) 0.1s, width 0.2s ease;
+}
+
+
+/* media */
+@media (max-width: 1300px) {
+    .header__ham {
+        display: block;
+    }
+    .header__member {
+        margin-right: 70px;
+        width: 20%;
+        text-align: right;
+    }
+    .header__member a {
+        font-size: 16px;
+        border: 1px solid #000;
+        padding: 10px 30px;
+        border-radius: 50px;
+        transition: all 0.3s;
+        white-space: nowrap;
+    }
+    .header__menu {
+        position: fixed;
+        right: -100%;
+        top: 80px;
+        width: 40%;
+        height: 100vh;
+        padding: 20px;
+        text-align: right;
+        transition: right 0.4s ease-in;
+        background-color: rgba(255, 255, 255, 0.7);
+    }
+    .header__menu ul li {
+        display: block;
+        margin: 20px;
+    }
+    .header__member a:hover {
+        background-color: #000;
+        color: #fff;
+    }
+    .header__menu li.active a {
+        background-color: #000;
+        color: #fff;
+        border-radius: 5px;
+    }
+    .header__menu ul li a {
+        padding: 10px;
+        white-space: nowrap;
+        padding-bottom: 5px;
+        font-size: 18px;
+    }
+    .header__menu.active {
+        right: 0;
+    }
+    .header__menu li:nth-child(1) a {
+        transition: opacity 0.3s 0.8s;
+    }
+    .header__menu li:nth-child(2) a {
+        transition: opacity 0.3s 1s;
+    }
+    .header__menu li:nth-child(3) a {
+        transition: opacity 0.3s 1.2s;
+    }
+    .header__menu li:nth-child(4) a {
+        transition: opacity 0.3s 1.4s;
+    }
+    .header__menu li:nth-child(5) a {
+        transition: opacity 0.3s 1.6s;
+    }
+    .ham_menu {
+        right: 40px;
+        top: 76px;
+    }
 }
