--- a/project/asset/css/board/boardModify.css
+++ b/project/asset/css/board/boardModify.css
@@ -82,3 +82,13 @@
     margin-right: 10px;
     padding-right: 8px;
 }
+
+@media (max-width:1280px) {
+    .Option select {
+        margin-top: 22px;
+        margin-right: 20px;
+        width: 260px;
+        font-size: 16px;
+        padding: 2px 20px;
+    }
+}
