--- a/project/board/css/boardWrite.css
+++ b/project/board/css/boardWrite.css
@@ -18,28 +18,23 @@
     border-bottom: 1px solid #6cc4b3;
 }
 .Write__option {
-    font-family: 'SCoreDream';
-    font-weight: 400;
-}
-.Write__option:focus {
-    outline: none;
+
 }
 .Option:first-child select {
     margin-right: 20px;
 }
 .Option select {
-    margin-top: 25px;
+    margin-top: 22px;
     margin-right: 20px;
     width: 300px;
     border: 1px solid #6cc4b3;
-    background: url(../../img/arrow.svg) no-repeat 93.5% 50%;
     border-radius: 25px;
     font-size: 16px;
     color: #6cc4b3;
-    padding: 2px 20px;
-    -webkit-appearance: none;
+    padding: 2px 15px;
+    /* -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none;
+    appearance: none; */
 }
 .button {
     border: 1px solid #6cc4b3;
@@ -81,34 +76,4 @@
     border-right: 1px solid #505050;
     margin-right: 10px;
     padding-right: 8px;
-}
-
-@media (max-width: 1200px) {
-    .Option select {
-        margin-top: 22px;
-        margin-right: 20px;
-        width: 240px;
-        font-size: 16px;
-        padding: 2px 20px;
-    }
-}
-@media (max-width: 1095px) {
-    .Option select {
-        margin-top: 22px;
-        margin-right: 20px;
-        width: 160px;
-        font-size: 16px;
-        padding: 2px 20px;
-        margin-bottom: 2px;
-    }
-}
-@media (max-width: 776px) {
-    .Option select {
-        margin-top: 22px;
-        margin-right: 20px;
-        width: 160px;
-        font-size: 16px;
-        padding: 2px 20px;
-        margin-bottom: 2px;
-    }
 }
