--- a/project/asset/css/board/boardType.css
+++ b/project/asset/css/board/boardType.css
@@ -70,13 +70,11 @@ input[type="date"]:focus {
     outline: none;
 }
 
-
 /* 테이블 공통 */
 table tbody tr td:nth-child(2) a {
     color: #505050;
     font-size: 16px;
 }
-
 
 /* 인기글 테이블*/
 .board_ranking {
@@ -149,8 +147,6 @@ table tbody tr td:nth-child(2) a {
     padding-right: 20px;
 }
 
-
-
 /* 메인 테이블 */
 .board__table {
     width: 100%;
@@ -174,11 +170,6 @@ table tbody tr td:nth-child(2) a {
 .mainTableCol:nth-child(5){
     width: 60px;
 }
-
-
-
-
-
 
 .table thead {
     color: #6cc4b3;
@@ -216,9 +207,6 @@ table tbody tr td:nth-child(2) a {
     text-align: center;
 }
 
-
-
-
 .main_table_body tr td:nth-child(3) p {
     /* border-left: 1px solid #505050; */
 }
@@ -229,11 +217,6 @@ table tbody tr td:nth-child(2) a {
     color: #505050;
     font-size: 18px;
 }
-
-
-
-
-
 
 .borad__pages {
     margin: 70px 0 20px 0;
@@ -302,7 +285,6 @@ input:required {
     display: none;
 }
 
-
 @media (max-width: 1200px){
     
 }
@@ -360,9 +342,13 @@ input:required {
         font-size: 0.9rem !important;
     }
     .Option_category:last-child p {
-        padding-right: 26px;
+        padding-right: 21px;
+        padding-left: 5px;
     } 
-
+    #searchOption2 {
+        padding-left: 20px;
+        background: url(../../img/arrow.svg) no-repeat 91.5% 50%;
+    }
     .board_ranking_tr {
         position: relative;
         display: flex;
@@ -385,10 +371,8 @@ input:required {
         left: 80px;
     }
 
-
     .table {
         border-top: 1px solid #6CC4B3;
-
     }
     .table thead {
         display: none;
@@ -416,13 +400,10 @@ input:required {
     .table tr td:nth-child(5){
         display: none;
     }
-    
 
     .borad__pages {
         margin-top: 30px;
     }
-
-
 
     #searchOption2 {
         font-size: 0.9rem;
@@ -431,8 +412,6 @@ input:required {
         bottom: 48px;
         font-size: 0.9rem;
     }
-
-
 }
 @media (max-width: 480px){
     .board_write {
