--- a/javascript/assets/css/game.css
+++ b/javascript/assets/css/game.css
@@ -30,6 +30,7 @@ body {
 }
 #header .time {
     color: #fff;
+    margin-top: 6px;
 }
 
 .icon01 {
@@ -39,7 +40,7 @@ body {
     width: 54px;
 }
 .icon01 img {
-    width: 90%;
+    width: 100%;
 }
 .icon01 span {
     display: block;
@@ -57,8 +58,7 @@ body {
     width: 54px;
 }
 .icon02 img {
-    width: 30%;
-    margin-left: 17px;
+    width: 100%;
 }
 .icon02 span {
     display: block;
@@ -76,7 +76,7 @@ body {
     width: 54px;
 }
 .icon03 img {
-    width: 90%;
+    width: 100%;
 }
 .icon03 span {
     display: block;
@@ -94,7 +94,7 @@ body {
     width: 54px;
 }
 .icon04 img {
-    width: 90%;
+    width: 100%;
 }
 .icon04 span {
     display: block;
@@ -112,7 +112,7 @@ body {
     width: 54px;
 }
 .icon05 img {
-    width: 90%;
+    width: 100%;
 }
 .icon05 span {
     display: block;
@@ -128,7 +128,7 @@ body {
     left: 0;
     bottom: 0;
     width: 100%;
-    background: rgba(230, 68, 74, 0.7);
+    background: rgba(230, 68, 74, 0.702);
     display: flex;
     align-items: center;
     justify-content: space-between;
